--- a/collections.html
+++ b/collections.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collections - Danii2's Archive</title>
-    <link rel="stylesheet" href="css/collections.css">
+    <link rel="stylesheet" href="collections.css">
 </head>
 <body>
     <div class="collections-container">
