--- a/filepreview.html
+++ b/filepreview.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File Preview - Danii2's Archive</title>
-    <link rel="stylesheet" href="css/file-preview.css">
+    <link rel="stylesheet" href="file-preview.css">
 </head>
 <body>
     <div class="preview-container">
@@ -16,6 +16,6 @@
         <button onclick="window.location.href='upload.html';">Upload File</button>
     </div>
 
-    <script src="js/file-preview.js"></script>
+    <script src="file-preview.js"></script>
 </body>
 </html>
