--- a/upload.html
+++ b/upload.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload File - Danii2's Archive</title>
-    <link rel="stylesheet" href="css/upload.css">
+    <link rel="stylesheet" href="upload.css">
 </head>
 <body>
     <div class="upload-container">
@@ -20,6 +20,6 @@
 
     <script src="https://apis.google.com/js/api.js"></script> <!-- Google Drive API -->
     <script src="main.js"></script>
-    <script src="js/upload.js"></script>
+    <script src="upload.js"></script>
 </body>
 </html>
