--- a/index.html
+++ b/index.html
@@ -34,3 +34,8 @@
     </footer>
 </body>
 </html>
+
+<script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+    <script src="main.js"></script> <!-- Your main.js should be added after the Firebase SDKs -->
